objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>AutoRABIT Record Type</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Demo</fullName>
        </values>
        <values>
            <fullName>Evaluate</fullName>
        </values>
        <values>
            <fullName>POC</fullName>
        </values>
        <values>
            <fullName>Procurement</fullName>
        </values>
        <values>
            <fullName>Propose</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Review</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>BPM Process</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Consulting</fullName>
        <description>This record type defines Business Unit types for Consulting</description>
        <isActive>false</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ALM__c</fullName>
        <label>ALM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jira</fullName>
                </value>
                <value>
                    <fullName>VersionOne</fullName>
                </value>
                <value>
                    <fullName>Azure Boards (VSTS)</fullName>
                </value>
                <value>
                    <fullName>IBMRTC</fullName>
                </value>
                <value>
                    <fullName>CA Agile (Rally)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ARR_Last_Full_Month_of_Opp__c</fullName>
        <description>ARR Last Full Month of Opp</description>
        <inlineHelpText>ARR Last Full Month of Opp</inlineHelpText>
        <label>ARR Renewable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AR_Implementation_Engineer__c</fullName>
        <label>Implementation Engineer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abhilash</fullName>
                </value>
                <value>
                    <fullName>Abhinav</fullName>
                </value>
                <value>
                    <fullName>Ashwin</fullName>
                </value>
                <value>
                    <fullName>Lavanya</fullName>
                </value>
                <value>
                    <fullName>Vignesh</fullName>
                </value>
                <value>
                    <fullName>Salma</fullName>
                </value>
                <value>
                    <fullName>Simon</fullName>
                </value>
                <value>
                    <fullName>Niranjan</fullName>
                </value>
                <value>
                    <fullName>Teja</fullName>
                </value>
                <value>
                    <fullName>Prashanth</fullName>
                </value>
                <value>
                    <fullName>Chris</fullName>
                </value>
                <value>
                    <fullName>Naveen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AUD_and_Tax_Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Australian Companies must pay tax. And must be given the opportunity to pay in AUD. Check this box to confirm that process has been done</inlineHelpText>
        <label>AUD and Tax Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Type_When_Opp_Created__c</fullName>
        <label>Account Type When Opp Created</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Account_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accounts_Payable_Email__c</fullName>
        <label>Accounts Payable Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Accounts_Payable_Phone__c</fullName>
        <label>Accounts Payable Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Acct_Has_Opp_Starting_After__c</fullName>
        <formula>Account.Max_Subscription_Start_Date__c &gt; Subscription_End_Date__c</formula>
        <label>Acct Has Opp Starting After</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acct_Has_Won_Opp_Starting_After__c</fullName>
        <formula>Account.Max_Won_Subscription_Start_Date__c &gt; Subscription_End_Date__c</formula>
        <label>Acct Has Won Opp Starting After</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <description>This would be used by Enterprise Services Team</description>
        <inlineHelpText>For ES Team use only</inlineHelpText>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activation_End_Date__c</fullName>
        <formula>ADDMONTHS(Tentative_Activation_Date__c,VALUE(of_Months_for_Subs_Activation__c))-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Tentative Activation Date + Number of Months for Subs Activation. This is the end date of the invoice period accounting will use.</inlineHelpText>
        <label>Activation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Oppty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActiveOppty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <label>Additional Info</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Partners__c</fullName>
        <formula>HYPERLINK(&quot;https://autorabit.lightning.force.com/lightning/r/&quot; &amp; Id &amp; &quot;/related/Additional_Partners__r/view&quot;,&quot;Click here to add/view&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CRM link to add/view additional partners.</inlineHelpText>
        <label>Additional Partners</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Info__c</fullName>
        <label>Address Info</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_del__c</fullName>
        <formula>TODAY()  -   DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Any_commitments_from_AR__c</fullName>
        <inlineHelpText>Mandate field to update any comments for Engineering/ CS team</inlineHelpText>
        <label>Any special commitments from AR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <formula>Account.MSA_Auto_Renew__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <inlineHelpText>Account Billing Country</inlineHelpText>
        <label>Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Contact_ID__c</fullName>
        <formula>Contact_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Dev Ops Consulting</fullName>
                    <label>DevOps Consulting</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CS_Comments__c</fullName>
        <label>CS Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Champion__c</fullName>
        <inlineHelpText>Who will sell on you behalf?</inlineHelpText>
        <label>Champion:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Churn_Subs__c</fullName>
        <formula>IF(INCLUDES(Opportunity_Type_New_Renewal_Upsell__c ,&quot;Churn&quot;),
(Number_of_Product_Subscriptions__c ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It&apos;s a formulae Field where it picks up the No. of Product Subscriptions from current opportunity line item</inlineHelpText>
        <label>Churn Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Month__c</fullName>
        <formula>CASE(MONTH(CloseDate), 1, &quot;Jan&quot;, 2, &quot;Feb&quot;, 3, &quot;Mar&quot;,  4, &quot;Apr&quot;,  5, &quot;May&quot;,  6, &quot;Jun&quot;, 7, &quot;Jul&quot;, 8, &quot;Aug&quot;, 9, &quot;Sep&quot;, 10, &quot;Oct&quot;, 11, &quot;Nov&quot;, 12, &quot;Dec&quot;, &quot;None&quot;)&amp; &quot; &apos; &quot; &amp; TEXT(YEAR(CloseDate))</formula>
        <label>Close Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Quarter__c</fullName>
        <formula>If(MONTH(CloseDate)&lt;4,&quot;Q1&quot;,
IF(MONTH(CloseDate)&lt;7,&quot;Q2&quot;,
IF(MONTH(CloseDate)&lt;10,&quot;Q3&quot;,&quot;Q4&quot;)))</formula>
        <label>Close Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cloud_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloud Organization</label>
        <referenceTo>CodeScan_Organization__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CodeScan_Org_Id__c</fullName>
        <externalId>true</externalId>
        <label>CodeScan Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_URL__c</fullName>
        <label>Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <label>Competition:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Copado</fullName>
                </value>
                <value>
                    <fullName>Flosum</fullName>
                </value>
                <value>
                    <fullName>Gearset</fullName>
                </value>
                <value>
                    <fullName>Jenkins</fullName>
                </value>
                <value>
                    <fullName>Atlassian - Bamboo</fullName>
                    <label>Bamboo</label>
                </value>
                <value>
                    <fullName>Dream factory – Snapshot</fullName>
                    <label>Snapshot</label>
                </value>
                <value>
                    <fullName>Jitterbit</fullName>
                </value>
                <value>
                    <fullName>Odaseva</fullName>
                </value>
                <value>
                    <fullName>Homegrown</fullName>
                </value>
                <value>
                    <fullName>Provar</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>OwnBackup</fullName>
                </value>
                <value>
                    <fullName>GRAX</fullName>
                </value>
                <value>
                    <fullName>Capstorm</fullName>
                </value>
                <value>
                    <fullName>Clayton</fullName>
                </value>
                <value>
                    <fullName>PMD</fullName>
                </value>
                <value>
                    <fullName>SonarQube</fullName>
                </value>
                <value>
                    <fullName>Codacy</fullName>
                </value>
                <value>
                    <fullName>Checkmarx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Business Contact)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact_Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <inlineHelpText>Contract End Date = Subs Activation End Date</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date_custom__c</fullName>
        <formula>CASE( MONTH(  Contract_End_Date__c ) , 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, &quot; &quot;) +&apos;-&apos;+text(DAY(  Contract_End_Date__c ))+&apos;-&apos;+ Text(YEAR(  Contract_End_Date__c ))</formula>
        <label>Contract End Date(custom)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Period__c</fullName>
        <formula>Contract_End_Date__c -  Contract_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>No of days between Contract Start Date and Contract End Date.</inlineHelpText>
        <label>Contract Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <inlineHelpText>Contract Start Date = Subs Activation Date</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date_custom__c</fullName>
        <formula>CASE( MONTH(  Contract_Start_Date__c ) , 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;,&quot; &quot;) +&apos;-&apos;+text(DAY(  Contract_Start_Date__c ))+&apos;-&apos;+ Text(YEAR(  Contract_Start_Date__c ))</formula>
        <label>Contract Start Date(custom)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Contract</fullName>
                    <default>true</default>
                    <label>Annual Contract</label>
                </value>
                <value>
                    <fullName>Co-Term Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversion_Time__c</fullName>
        <formula>(CloseDate -  DATEVALUE(CreatedDate))/30.42</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion Time(Create - Close) in Mths</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Date1__c</fullName>
        <formula>if(Month(DATEVALUE(CreatedDate))&gt;9,&apos;Q4&apos;,(if(Month(DATEVALUE(CreatedDate))&gt;6,&apos;Q3&apos;,(if(Month(DATEVALUE(CreatedDate))&gt;3,&apos;Q2&apos;,&apos;Q1&apos;)))))</formula>
        <inlineHelpText>Created Date as Fiscal Quarter (Q1, Q2, Q3, Q4)</inlineHelpText>
        <label>Created Date as FQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Month__c</fullName>
        <formula>CASE(MONTH(DATEVALUE(CreatedDate)), 1, &quot;1&quot;, 2, &quot;2&quot;, 3, &quot;3&quot;, 4, &quot;4&quot;, 5, &quot;5&quot;, 6, &quot;6&quot;, 7, &quot;7&quot;, 8, &quot;8&quot;, 9, &quot;9&quot;, 10, &quot;10&quot;, 11, &quot;11&quot;, 12, &quot;12&quot;, &quot;None&quot;)</formula>
        <label>Created Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Month_as_Date__c</fullName>
        <description>Date of first day of month when opportunity was created</description>
        <formula>DATEVALUE(CreatedDate)  - DAY(DATEVALUE(CreatedDate)) + 1</formula>
        <label>Created Month as Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Subs__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Please update this column with count of previous licenses, which would calculate the upsell/ renewal subs from the current opportunity</inlineHelpText>
        <label>Current Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Subscriptions__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Existing License Count</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Work__c</fullName>
        <description>Mention the tasks worked on this week</description>
        <inlineHelpText>Mention the tasks worked on this week</inlineHelpText>
        <label>Current Work</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Close_date__c</fullName>
        <description>Customized close date field which can display date in the format DD-MM-YYYY</description>
        <formula>CASE( MONTH(  CloseDate ) , 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
&quot;Dec&quot;) +&apos;-&apos;+text(DAY(  CloseDate ))+&apos;-&apos;+ Text(YEAR(  CloseDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customized close date field which can display date in the format DD-MM-YYYY</inlineHelpText>
        <label>Custom Close date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <formula>Account.Customer_group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Onboarding__c</fullName>
        <label>Customer Onboarding State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IT Infrastructure Readiness</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type_Active_Churn__c</fullName>
        <formula>Account.Customer_Status__c</formula>
        <label>Customer Type (Active/Churn)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_Time_DC_Close_in_Days__c</fullName>
        <formula>CloseDate - DC_Completed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cycle Time(DC - Close) in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_Time__c</fullName>
        <formula>(CloseDate - DC_Completed_Date__c)/30.42</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cycle Time(DC - Close) in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Completed_Date_Vault__c</fullName>
        <label>DC Completed Date (Vault)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Completed_Date__c</fullName>
        <description>Discovery Completed Date</description>
        <label>DC Completed Date (CI/CD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Scheduled_Date_Vault__c</fullName>
        <label>DC Scheduled For (Vault)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Scheduled_Date__c</fullName>
        <label>DC Scheduled For (CI/CD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Scheduled_On_CI_CD__c</fullName>
        <label>DC Scheduled On (CI/CD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Scheduled_On_Vault__c</fullName>
        <label>DC Scheduled On (Vault)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Storage__c</fullName>
        <label>Data Storage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shared</fullName>
                </value>
                <value>
                    <fullName>Exclusive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_Opportunity_Created_for_CI_CD__c</fullName>
        <formula>ABS(DC_Completed_Date__c - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Opportunity Created for CI/CD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Opportunity_Created_for_Vault__c</fullName>
        <formula>ABS( DC_Completed_Date_Vault__c - DATEVALUE( CreatedDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Opportunity Created for Vault</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_Started__c</fullName>
        <formula>TODAY()- Implementation_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>No. of days between the &apos;Implementation Start Date&apos; and the current date.</inlineHelpText>
        <label>Days since Started</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Subscription_End__c</fullName>
        <formula>Subscription_End_Date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Subscription End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Criteria__c</fullName>
        <inlineHelpText>What are their technical, vendor, and financial criteria?</inlineHelpText>
        <label>Decision Criteria:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Process__c</fullName>
        <inlineHelpText>The what happens? Define validation and approval?</inlineHelpText>
        <label>Decision Process:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedicated_Foundation_Items__c</fullName>
        <description>Summed quantity of products with family Dedicated Foundation.</description>
        <label>Dedicated Foundation Items</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductFamily__c</field>
            <operation>equals</operation>
            <value>Dedicated Foundation</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Demo_Performed_Date_Vault__c</fullName>
        <label>Demo Performed Date (Vault)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Performed_Date__c</fullName>
        <description>Demo Performed Date</description>
        <label>Demo Performed Date (CI/CD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Scheduled_Date_Vault__c</fullName>
        <label>Demo Scheduled Date (Vault)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Scheduled_Date__c</fullName>
        <description>Demo Scheduled Date</description>
        <label>Demo Scheduled Date (CI/CD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Sales_NewLogo_Upsell_ACV_Amount__c</fullName>
        <inlineHelpText>We are using this to forecast New Logo or Upsell ACV/ARR amount.</inlineHelpText>
        <label>Direct Sales NewLogo/Upsell ACV Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Use this field to capture any discounts given to the client. Entering a value in this field will automatically update the amounts field.</description>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Downsell_Subs__c</fullName>
        <formula>IF(INCLUDES(Opportunity_Type_New_Renewal_Upsell__c ,&quot;Downsell&quot;),
(Number_of_Product_Subscriptions__c ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It&apos;s a formulae Field where it picks up the No. of Product Subscriptions from current opportunity line item</inlineHelpText>
        <label>Downsell Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer__c</fullName>
        <inlineHelpText>Who has profit and loss responsibilitity for this?</inlineHelpText>
        <label>Economic Buyer:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_End_Date__c</fullName>
        <label>Evaluation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluation_Start_Date__c</fullName>
        <label>Evaluation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fields_Needing_Update_Before_Closed_Won__c</fullName>
        <formula>IF(ISBLANK( of_Months_for_Subs_Activation__c ),&quot;# of Months (for Subs Activation), &quot;,&quot;&quot;) &amp;
IF(HasOpportunityLineItem = FALSE,&quot;Add Opportunity Product(s), &quot;,&quot;&quot;) &amp;
IF(ISBLANK( TEXT(Primary_Time_Zone__c) ),&quot;Primary Time Zone, &quot;,&quot;&quot;) &amp;
IF(ISBLANK( Subscription_Start_Date__c ),&quot;Subscription Start Date, &quot;,&quot;&quot;) &amp;
IF(ISBLANK( Subscription_End_Date__c ),&quot;Subscription End Date, &quot;,&quot;&quot;) &amp;
IF(!ISBLANK( of_Months_for_Subs_Activation__c ) &amp;&amp; !ISBLANK( Subscription_Start_Date__c ) &amp;&amp; !ISBLANK( Subscription_End_Date__c ) &amp;&amp; ADDMONTHS(Subscription_Start_Date__c,VALUE(of_Months_for_Subs_Activation__c))-1 &lt;&gt; Subscription_End_Date__c,&quot;Subscription End Date needs to be &quot; &amp; TEXT(ADDMONTHS(Subscription_Start_Date__c,VALUE(of_Months_for_Subs_Activation__c))-1) &amp; &quot; based on the start date and # of Months. Change the start date, end date, or # of Months. &quot;,&quot;&quot;) &amp;
IF(Order_Attached__c != true &amp;&amp; ISBLANK(Account.Auto_Renew_Term_Notice_Period_In_Days__c),&quot;Upload a signed order to the opp with po, order, signed, or docusign in the filename.&quot;,&quot;&quot;)</formula>
        <inlineHelpText>If this field is blank, the fields required for Closed Won stage have been populated.</inlineHelpText>
        <label>Fields to Update Before Closed Won</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Had_Demo__c</fullName>
        <description>A date denoting when the customer was given a demo by a product specialist.</description>
        <label>Has Had Demo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HelperCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this box is used restrict the email  if the opportunity has already closed won then this field will be true</description>
        <label>HelperCheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hosting_Location__c</fullName>
        <label>Hosting Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US-Any</fullName>
                </value>
                <value>
                    <fullName>US-East</fullName>
                </value>
                <value>
                    <fullName>US-West</fullName>
                </value>
                <value>
                    <fullName>Canada-Canada</fullName>
                </value>
                <value>
                    <fullName>EU-Any</fullName>
                </value>
                <value>
                    <fullName>EU-Frankfurt</fullName>
                </value>
                <value>
                    <fullName>EU-London</fullName>
                </value>
                <value>
                    <fullName>APJ-Any</fullName>
                </value>
                <value>
                    <fullName>APJ-Sydney</fullName>
                </value>
                <value>
                    <fullName>APJ-Singapore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>